# moira

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.observability.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: integration-tests.yml  lint.yml  pr-approval.yml  unit-tests.yml
alembic/: env.py
alembic/versions/: 79586761cbaf_create_scheduling_core_tables.py  86049b9c6690_create_unique_key_to_customer_phone.py  ac3bad8bc2e3_create_availability_rules.py  d4f6a1b7c9e2_add_appointment_idempotency.py
app/: config.py  database.py  main.py
app/api/: deps.py  exception_handlers.py
docs/: ci.md
docs/adr/: 0001-stack-python-fastapi.md  0002-guest-booking-without-mandatory-customer-account.md  0003-customer-is-separate-from-user.md  0004-reuse-customers-globally-by-canonical-phone.md  0005-use-discrete-15-minute-appointment-slots.md  0006-do-not-persist-available-slots-in-mvp.md  0007-prevent-double-booking-with-database-constraint.md  0008-store-appointment-duration-snapshots.md  0009-require-service-durations-multiple-of-15-minutes.md  0010-use-pragmatic-modular-architecture.md  0011-store-provider-currency-and-offering-prices-in-minor-units.md  0012-provider-signup-password-policy.md  0013-provider-auth-ownership-idempotency.md  0014-version-v1-and-standard-error-envelope.md  0015-use-vendor-neutral-structured-logging-and-otlp.md  README.md
docs/specs/: structured-logging.md
observability/: loki.yaml  otel-collector.yaml
scripts/: run_integration_tests.py  smoke_observability.py
(+136 files in other folders)
